--- a/_posts/2022-09-08-git-refs.md
+++ b/_posts/2022-09-08-git-refs.md
@@ -1,14 +1,75 @@
 ---
 layout: post
-title: git cherry
+title: Git Refs
 tags: git
 comments: true
 ---
 
-# Title
+# Git Refs
 
-git cherry-pick --strategy=recursive -X theirs {commits last to first}
+Git is a version control tool used for developing and maintaining software projects. \\
+Generally speaking developers today will know the basics of how to use some form of \\
+svc in a practical scenario, but when diving into the actual details of how these \\
+tools work we usually haven't the foggiest. 
 
-Appendix link [^1] 
+I definitely found myself in this category, despite being a somewhat source of \\
+knowledge for getting git to do what was needed at my past companies. This blog post \\ 
+is a little note on my process of removing this mindset, and instead trying to \\
+understand what git is doing behind the scenes. At the time of posting this I've \\
+already done a lot of my learning on git, but say I were to take a break from \\ 
+software development (i.e. travel the world for 6 months), this is a good reference \\
+point to remind myself.
 
-[^1]: Generic Markdown
+## ref
+
+Git **refs** are a named, human readable pointers to a git commit ID. Some examples of \\
+**refs** include `master` and `dev`, as well as git **tags** such as `v2_successful_build` \\
+and `release1`. Refs can even point to other refs; an example of this is creating a git \\
+**tag** against a branch **ref**, where the tag will resolve to the commit ID for the \\
+branch **ref**. A list of these refs can be seen in `.git/refs/`.
+
+## head
+
+When the **ref** is a branch name, it points to the most recent commit ID of the branch \\
+(known as the tip). A git **head** is the **ref** that points to the tip of a branch. \\
+Because of this, the branch name ref is always kept in sync with the latest commit ID \\ 
+for that branch by referring to the head. A list of heads can been seen in `.git/refs/heads`.
+
+## HEAD
+
+**HEAD** points to the commit ID that you are currently working on. It's essentially an \\
+environment variable kept inside the repository which changes when moving around **refs**. \\
+It is stored in `.git/HEAD`. An example of this would be:
+
+```
+> git checkout dev
+Switched to branch 'dev'
+Your branch is up to date with 'origin/dev'.
+
+> cat .git/HEAD
+ref: refs/heads/dev
+```
+
+### Detached HEAD?
+
+All this means is your currently checked out commit ID is behind the commit ID pointed \\
+to by the **head** of your current branch. An example of how this could happen would be:
+
+```
+> git log --oneline
+367f155 (HEAD -> master, origin/master, origin/HEAD) Do something cool.
+32e5fd6 Do something sweet.
+946abcb Do something special.
+
+> git checkout 32e5fd6
+Note: switching to '32e5fd6'.
+
+You are in 'detached HEAD' state. You can look around, make experimental
+changes and commit them, and you can discard any commits you make in this
+state without impacting any branches by switching back to a branch.
+
+HEAD is now at 32e5fd6 Do something sweet.
+```
+
+
+[What is Git HEAD?](https://initialcommit.com/blog/what-is-git-head#:~:text=In%20Git%2C%20a%20head%20is,recent%20commit)%20of%20that%20branch.)
