I added git tagging and some other bits

--- a/_posts/2022-09-14-git-tag.md
+++ b/_posts/2022-09-14-git-tag.md
@@ -7,5 +7,45 @@ comments: true
 
 # Git Tag
 
+Git tagging is a useful way to mark specific points in a repository's commit history. There are plenty of useful reasons for doing this, whether it be for versioning or noting a specific point in time when software was of proven quality.
+
+## Listing Tags
+
+To list git tags type `git tag` which will display a list of all tags in your repository.
+
+To add to this, add `-l` or `--list` in the form of `git tag -l "pattern"` to search for all git tags matching that pattern.
+
+## Tagging
+
+There are two types of tags in git: `lightweight` and `annotated`. **Lightweight** tags are primarily used for temporary tagging as they contain little information. **Annotated** tags on the other hand can be given a name, email, and date; have a tagging message; are checksummed, and can be signed and verified with GNU Privacy Guard (GPG)[^1].  
+
+## Annotated Tags
+
+To create an annotated tag you must specify the `-a` option. You can also add a message to this tag by specifying the `-m` option.
+
+`git tag -a v1.4 -m "my version 1.4"`
+
+To show this tag you can the specify the name of the annotated tag like
+
+`git show v1.4`
+
+## Lightweight Tags
+
+To create a lightweight tag you provide no options to `git tag v1.4`. You can still run `git show v1.4` but the contents returned contain much less information.
+
+## Tagging Previous commits
+
+You can also tag previous commits using git tag. If you run `git log --oneline` you are provided a list of commit IDs. Using this commit ID you can run the command `git tag -a v1.3 -m "Tag back commit" commitID` to tag the previous commit.
+
+## Deleting Tags
+
+To delete tags form your local repository you can run `git tag -d v1.4`.
+
+## Working with Tags and Remote
+
+By default, local tags are not pushed, or removed to the remote repository via `git push`. To push tags you must run `git push origin`, with the addition of `--tags` or the tag name i.e. `v1.4`. And to delete; `git push origin --delete v1.4`. By default, git will reject any tag names that already exist in the repository, fortunately you can specify `-f` to any of these options (including remote operations) to force these to be overwritten.
+
+[^1][Git Basics - Tagging](https://git-scm.com/book/en/v2/Git-Basics-Tagging)
+
 
 
