--- a/_posts/2022-09-14-quiesce.md
+++ b/_posts/2022-09-14-quiesce.md
@@ -5,7 +5,7 @@ tags: words
 comments: true
 ---
 
-# Quiesce[^1]
+# Quiesce
 
 ### Definition
 1. to become quiet or subdued
@@ -15,4 +15,4 @@ comments: true
 * to quiesce an agent or service while a task runs
 * send a message to a controlling process to quiesce until a task completes
 
-[^1]: https://www.collinsdictionary.com/dictionary/english/quiesceGeneric
+[Dictionary Definition](https://www.collinsdictionary.com/dictionary/english/quiesceGeneric)
