Add about and bad favicon

--- a/_posts/2022-09-14-git-tag.md
+++ b/_posts/2022-09-14-git-tag.md
@@ -45,7 +45,7 @@ To delete tags form your local repository you can run `git tag -d v1.4`.
 
 By default, local tags are not pushed, or removed to the remote repository via `git push`. To push tags you must run `git push origin`, with the addition of `--tags` or the tag name i.e. `v1.4`. And to delete; `git push origin --delete v1.4`. By default, git will reject any tag names that already exist in the repository, fortunately you can specify `-f` to any of these options (including remote operations) to force these to be overwritten.
 
-[^1][Git Basics - Tagging](https://git-scm.com/book/en/v2/Git-Basics-Tagging)
+[^1]:[Git Basics - Tagging](https://git-scm.com/book/en/v2/Git-Basics-Tagging)
 
 
 
